--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,11 @@
+@import "./base/common";
+@import "./base/container";
+
 @import "./utils/visually-hidden";
 @import "./utils/variables";
 @import "./utils/header-menu";
-@import "./utils/logo"
+
+@import "./components/logo";
+@import "./components/backdrop";
+@import "./components/buttons";
+@import "./components/modal";
