--- a/css/main.css
+++ b/css/main.css
@@ -71,97 +71,6 @@ body {
     ;
 }
 
-.header .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 0;
-}
-
-.header {
-  background-color: var(--main-bg);
-  border-bottom: 1px solid var(--menu-line);
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.menu {
-  display: flex;
-  font: var(--main-font);
-  font-weight: 500;
-  font-size: 14px;
-}
-
-.menu__link {
-  text-decoration: none;
-  color: var(--main-text);
-}
-
-.menu .menu__item:not(:last-child) {
-  margin-right: 46px;
-}
-
-.menu__item {
-  position: relative;
-}
-
-.menu a:hover,
-.menu a:focus {
-  color: var(--button-hover-bg);
-  cursor: pointer;
-}
-
-.current .menu__link::after {
-  position: absolute;
-  content: "";
-  display: block;
-  height: 4px;
-  width: 100%;
-  top: 45px;
-  border-radius: 2px;
-  background-color: var(--blue-elements);
-}
-
-.contact-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  fill: var(--grey-elements);
-}
-
-.contact-list li:first-child {
-  margin-right: 30px;
-}
-
-.contact-list .contact-list__link:hover,
-.contact-list .contact-list__link:focus {
-  fill: var(--blue-elements);
-  color: var(--button-hover-bg);
-  text-decoration: none;
-}
-
-.contact__icon {
-  margin-right: 10px;
-}
-
-.contact-list__link {
-  color: var(--grey-elements);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.143;
-  text-decoration: none;
-  margin-top: 9px;
-}
-
-.contact .contact-list__link:not(:last-child) {
-  margin-right: 50px;
-}
-
 .logo {
   font-family: var(--second-font);
   font-size: 26px;
@@ -445,5 +354,490 @@ form .modal__form-feedback {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+}
+
+.social-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  fill: var(--customers-logos);
+  padding-left: 32px;
+  padding-right: 32px;
+  margin-bottom: 30px;
+}
+
+.social-list__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44x;
+  height: 44px;
+  background-color: var(--main-bg);
+  border-radius: 50%;
+  /* transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+.social-list__link:hover,
+.social-list__link:focus {
+  background-color: var(--button-hover-bg);
+  fill: var(--main-bg);
+}
+
+.social-icon {
+  width: 40px;
+  height: 20px;
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 0;
+}
+
+.header {
+  background-color: var(--main-bg);
+  border-bottom: 1px solid var(--menu-line);
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  font: var(--main-font);
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.menu__link {
+  text-decoration: none;
+  color: var(--main-text);
+}
+
+.menu .menu__item:not(:last-child) {
+  margin-right: 46px;
+}
+
+.menu__item {
+  position: relative;
+}
+
+.menu a:hover,
+.menu a:focus {
+  color: var(--button-hover-bg);
+  cursor: pointer;
+}
+
+.current .menu__link::after {
+  position: absolute;
+  content: "";
+  display: block;
+  height: 4px;
+  width: 100%;
+  top: 45px;
+  border-radius: 2px;
+  background-color: var(--blue-elements);
+}
+
+.contact-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  fill: var(--grey-elements);
+}
+
+.contact-list li:first-child {
+  margin-right: 30px;
+}
+
+.contact-list .contact-list__link:hover,
+.contact-list .contact-list__link:focus {
+  fill: var(--blue-elements);
+  color: var(--button-hover-bg);
+  text-decoration: none;
+}
+
+.contact__icon {
+  margin-right: 10px;
+}
+
+.contact-list__link {
+  color: var(--grey-elements);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.143;
+  text-decoration: none;
+  margin-top: 9px;
+}
+
+.contact .contact-list__link:not(:last-child) {
+  margin-right: 50px;
+}
+
+.head-info {
+  height: 600px;
+  width: auto;
+  background: var(--head-foot-bg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img-team.jpg);
+  max-width: 1600px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  color: var(--main-bg);
+  text-align: center;
+  font-weight: 900;
+  line-height: 1.36;
+  top: 50%;
+}
+
+.head-info h1 {
+  vertical-align: middle;
+}
+
+.head-info__txt {
+  font-size: 44px;
+  line-height: 1.364;
+  padding-top: 200px;
+  margin: 0;
+}
+
+.news__icon {
+  width: 270px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--portfolio-buttons-bg);
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+
+/* .section {
+  margin-top: 94px;
+  margin-bottom: 94px;
+  } */
+.section .news {
+  display: flex;
+  justify-content: space-between;
+}
+
+.news__title {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.143;
+  margin: 0;
+}
+
+.news__txt {
+  color: var(--grey-elements);
+  font-size: 14px;
+  line-height: 1.714;
+  margin-top: 10px;
+}
+
+.about {
+  display: flex;
+  margin-top: 50px;
+}
+
+.about__item {
+  justify-content: space-between;
+  margin-bottom: 0;
+  position: relative;
+}
+
+.about__item img {
+  display: block;
+}
+
+.about__label {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  text-align: center;
+  line-height: 1.143;
+  background-color: var(--label-grey);
+  color: var(--main-bg);
+  height: 70px;
+  padding: 27px 0;
+}
+
+.section__txt {
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.container .about {
+  margin-bottom: 94px;
+}
+
+.news__item:not(:last-child),
+.about__item:not(:last-child),
+.team__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+/* ======= TEAM ======= */
+.team__background {
+  background-color: var(--portfolio-buttons-bg);
+}
+
+.container .team {
+  padding-bottom: 94px;
+  display: flex;
+}
+
+.team__item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--main-bg);
+  border-bottom: 94px;
+}
+
+.team__name {
+  font-weight: 500;
+  line-height: 1.188;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.team__job {
+  color: var(--grey-elements);
+  line-height: 1.188;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 16px;
+}
+
+.customers {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 94px;
+}
+
+.customers__item {
+  width: 170px;
+  height: 92px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--main-bg);
+  border: 1px solid var(--customers-logos);
+  border-radius: 4px;
+  fill: var(--customers-logos);
+  /* transition: all 250ms linear; */
+}
+
+.customers__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.customers__item:hover,
+.customers__item:focus {
+  border: 1px solid var(--blue-elements);
+  fill: var(--blue-elements);
+  cursor: pointer;
+}
+
+.portfolio__content .container {
+  padding-top: 50px;
+}
+
+.portfolio__gallery {
+  margin-top: 0;
+  margin-bottom: 94px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.portfolio__gallery-item li {
+  margin-left: 0;
+  flex-basis: calc(100%/3);
+}
+
+.portfolio__gallery-item {
+  margin-bottom: 30px;
+}
+
+.portfolio__gallery-item figcaption {
+  padding: 20px 24px;
+  width: 370px;
+}
+
+.portfolio__gallery-item figure {
+  border: 1px solid var(--menu-line);
+  width: 370px;
+}
+
+.portfolio__gallery-item figure:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
+
+.portfolio__gallery-item:hover .portfolio__overflow {
+  transform: translatey(0);
+}
+
+.portfolio__gallery-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio__gallery-box img {
+  display: block;
+}
+
+.portfolio__overflow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translatey(100%);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .portfolio-overflow-txt, */
+.portfolio__gallery-box p {
+  font-size: 18px;
+  line-height: 1.556;
+  color: var(--main-bg);
+  padding: 49px 24px;
+  margin: 0;
+}
+
+.portfolio__gallery-company {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 2;
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+.portfolio__gallery-category {
+  margin: 0;
+  font-weight: 400;
+  color: var(--grey-elements);
+  line-height: 1.875;
+}
+
+.footer .container {
+  display: flex;
+  align-items: top;
+  justify-content: center;
+  padding-top: 0;
+}
+
+.footer {
+  height: 252px;
+  width: auto;
+  background-color: var(--head-foot-bg);
+  color: var(--main-bg);
+  font-size: 14px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer a {
+  color: var(--main-bg);
+  text-decoration: none;
+}
+
+.footer li > a {
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+}
+
+.address {
+  margin-top: 20px;
+  font: var(--main-font);
+}
+
+.footer__social {
+  margin-left: 70px;
+  margin-right: 78px;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: center;
+  align-items: top;
+}
+
+.footer__social-list .social-list__link {
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: var(--main-bg);
+}
+
+.footer__social-list li:not(:last-child) {
+  margin-right: 10px;
+}
+
+.footer__social-list .social-list__link:hover,
+.footer__social-list .social-list__link:focus {
+  background-color: var(--blue-elements);
+  cursor: pointer;
+}
+
+.join-us {
+  text-transform: uppercase;
+  margin-top: 12px;
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+}
+
+.footer li > a:hover,
+.footer li > a:focus {
+  color: var(--button-hover-bg);
+  cursor: pointer;
+}
+
+.newsletter__form-email {
+  background: none;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 16px;
+  margin-right: 12px;
+}
+
+.newsletter__form-email:focus {
+  color: var(--footer-grey);
+  outline: none;
+  border-color: var(--blue-elements);
+}
+
+.menu__link,
+.contact-list__link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list__link,
+.customers__item,
+.social-list li,
+.social-list__item .social-list__link {
+  transition: background-color, fill 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=main.css.map */
