--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,9 +3,19 @@
 
 @import "./utils/visually-hidden";
 @import "./utils/variables";
-@import "./utils/header-menu";
 
 @import "./components/logo";
 @import "./components/backdrop";
 @import "./components/buttons";
 @import "./components/modal";
+@import "./components/socials";
+
+@import "./components/header-menu";
+@import "./components/head-info";
+@import "./components/news";
+@import "./components/about";
+@import "./components/team";
+@import "./components/customers";
+@import "./components/portfolio-gallery";
+@import "./components/footer";
+
