--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,85 +1,74 @@
 /* ======= Header ======= */
 .main-button {
-    background-color: var(--blue-elements);
-    color: var(--main-bg);
-    font: var(--main-font);
-    font-size: 16px;
-    font-weight: 700;
-    border: 0px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 10px 41px 10px 42px;
-    margin-top: 30px;
-  }
+  background-color: var(--blue-elements);
+  color: var(--main-bg);
+  font: var(--main-font);
+  font-size: 16px;
+  font-weight: 700;
+  border: 0px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 10px 41px 10px 42px;
+  margin-top: 30px;
+}
 /* ======= Portfolio ======= */
-  .portfolio__button button {
-    background-color: var(--portfolio-buttons-bg);
-    font-size: 16px;
-    font-weight: 500;
-    padding: 6px 22px 6px 22px;
-    margin-right: 8px;
-    border-width: 0px;
-    border-radius: 4px;
+.portfolio__button {
+  display: flex;
+  padding-left: 0;
+  & button {
+      background-color: var(--portfolio-buttons-bg);
+      font-size: 16px;
+      font-weight: 500;
+      padding: 6px 22px 6px 22px;
+      margin-right: 8px;
+      border-width: 0px;
+      border-radius: 4px;
+      transition: color, background-color, box-shadow 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:focus {
+          background-color: var(--button-hover-bg);
+          color: var(--main-bg);
+          font-weight: 500;
+          cursor: pointer;
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+          0px 1px 2px rgba(0, 0, 0, 0.08),
+          0px 2px 2px rgba(0, 0, 0, 0.12);
+      }
   }
-  .portfolio__button {
-    display: flex;
-    padding-left: 0;
-  }
-  .portfolio__button button:hover,
-  .portfolio__button button:focus {
-    background-color: var(--button-hover-bg);
-    color: var(--main-bg);
-    font-weight: 500;
-    cursor: pointer;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-    0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  }
-  .portfolio__button button {
-    transition: color, background-color, box-shadow 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);  
-  }
+}
 /* ======= Modal ======= */
-  .modal__form button {
-    background-color: var(--blue-elements);
-    color: var(--main-bg);
-    font: var(--main-font);
-    font-size: 16px;
-    font-weight: 700;
-    border: 0px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-    width: 200px;
-    height: 50px;
-    margin-top: 30px;
-    margin-bottom: 40px;
-  }
+.modal__form button {
+  @extend .main-button;
+  width: 200px;
+  height: 50px;
+  margin-bottom: 40px;
+}
 /* ======= Newsletter ======= */
-  .newsletter__form-btn {
-    background-color: var(--blue-elements);
-    color: var(--main-bg);
-    font: var(--main-font);
-    border: 0px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-    width: 200px;
-    height: 50px;
-    fill: var(--main-bg);
-  }
-  .newsletter__btn-flex {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.875;
-    letter-spacing: 0.06em;
-  }
-  .newsletter__btn-icon {
-    margin-left: 24px;
-    width: 24px;
-    height: 24px;
-  }
+.newsletter__form-btn {
+  background-color: var(--blue-elements);
+  color: var(--main-bg);
+  font: var(--main-font);
+  border: 0px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  fill: var(--main-bg);
+}
+.newsletter__btn-flex {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+}
+.newsletter__btn-icon {
+  margin-left: 24px;
+  width: 24px;
+  height: 24px;
+}
