--- a/css/main.css
+++ b/css/main.css
@@ -184,11 +184,30 @@ body {
   border-radius: 4px;
 }
 
+.modal__close {
+  position: absolute;
+  align-content: center;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--main-bg);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.modal__close-x {
+  width: 11px;
+  height: 11px;
+  margin-left: 1px;
+  margin-top: 4px;
+}
+
 label {
   display: flex;
   flex-direction: column;
   align-content: center;
-  /* position: relative; */
 }
 
 .modal__form-phone,
@@ -203,7 +222,6 @@ label {
   position: absolute;
   top: 50%;
   left: 14px;
-  /* transform: translateY(-20%); */
 }
 
 textarea {
@@ -322,26 +340,6 @@ form .modal__form-feedback {
   background-position: 1px;
 }
 
-.modal__close-x {
-  width: 11px;
-  height: 11px;
-  margin-left: 1px;
-  margin-top: 4px;
-}
-
-.modal__close {
-  position: absolute;
-  align-content: center;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background-color: var(--main-bg);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  cursor: pointer;
-}
-
 .social-list {
   display: flex;
   align-items: center;
@@ -360,11 +358,11 @@ form .modal__form-feedback {
   height: 44px;
   background-color: var(--main-bg);
   border-radius: 50%;
-  /* transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  transition: background-color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list__link:hover,
-.social-list__link:focus {
+.social-list__link:hover, .social-list__link:focus {
   background-color: var(--button-hover-bg);
   fill: var(--main-bg);
 }
@@ -403,6 +401,7 @@ form .modal__form-feedback {
 .menu__link {
   text-decoration: none;
   color: var(--main-text);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu .menu__item:not(:last-child) {
@@ -459,6 +458,7 @@ form .modal__form-feedback {
   line-height: 1.143;
   text-decoration: none;
   margin-top: 9px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact .contact-list__link:not(:last-child) {
@@ -503,10 +503,6 @@ form .modal__form-feedback {
   margin-bottom: 30px;
 }
 
-/* .section {
-  margin-top: 94px;
-  margin-bottom: 94px;
-  } */
 .section .news {
   display: flex;
   justify-content: space-between;
@@ -526,6 +522,10 @@ form .modal__form-feedback {
   margin-top: 10px;
 }
 
+.news__item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .about {
   display: flex;
   margin-top: 50px;
@@ -543,6 +543,10 @@ form .modal__form-feedback {
 
 .about__item img {
   display: block;
+}
+
+.about__item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .about__label {
@@ -569,13 +573,10 @@ form .modal__form-feedback {
   margin-bottom: 50px;
 }
 
-.news__item:not(:last-child),
-.about__item:not(:last-child),
 .team__item:not(:last-child) {
   margin-right: 30px;
 }
 
-/* ======= TEAM ======= */
 .team__background {
   background-color: var(--portfolio-buttons-bg);
 }
@@ -625,6 +626,8 @@ form .modal__form-feedback {
   border: 1px solid var(--customers-logos);
   border-radius: 4px;
   fill: var(--customers-logos);
+  transition: background-color, fill 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers__item:not(:last-child) {
@@ -649,13 +652,13 @@ form .modal__form-feedback {
   justify-content: space-between;
 }
 
+.portfolio__gallery-item {
+  margin-bottom: 30px;
+}
+
 .portfolio__gallery-item li {
   margin-left: 0;
   flex-basis: calc(100%/3);
-}
-
-.portfolio__gallery-item {
-  margin-bottom: 30px;
 }
 
 .portfolio__gallery-item figcaption {
@@ -686,6 +689,14 @@ form .modal__form-feedback {
   display: block;
 }
 
+.portfolio__gallery-box p {
+  font-size: 18px;
+  line-height: 1.556;
+  color: var(--main-bg);
+  padding: 49px 24px;
+  margin: 0;
+}
+
 .portfolio__overflow {
   position: absolute;
   top: 0;
@@ -695,15 +706,6 @@ form .modal__form-feedback {
   background-color: rgba(33, 150, 243, 0.9);
   transform: translatey(100%);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* .portfolio-overflow-txt, */
-.portfolio__gallery-box p {
-  font-size: 18px;
-  line-height: 1.556;
-  color: var(--main-bg);
-  padding: 49px 24px;
-  margin: 0;
 }
 
 .portfolio__gallery-company {
@@ -809,18 +811,5 @@ form .modal__form-feedback {
   color: var(--footer-grey);
   outline: none;
   border-color: var(--blue-elements);
-}
-
-.menu__link,
-.contact-list__link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-list__link,
-.customers__item,
-.social-list li,
-.social-list__item .social-list__link {
-  transition: background-color, fill 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=main.css.map */
