--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -11,7 +11,10 @@
   margin-bottom: 0;
   position: relative; 
       & img {
-          display: block;
+        display: block;
+      }
+      &:not(:last-child) {
+        margin-right: 30px;
       }
   }
   &__label {
