--- a/sass/components/_header-menu.scss
+++ b/sass/components/_header-menu.scss
@@ -22,6 +22,7 @@
   &__link {
       text-decoration: none;
       color: var(--main-text);
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   & .menu__item:not(:last-child) {
       margin-right: 46px;
@@ -71,6 +72,7 @@ font-weight: 500;
 line-height: 1.143;
 text-decoration: none;
 margin-top: 9px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact .contact-list__link:not(:last-child) {
 margin-right: 50px;
