--- a/sass/components/_portfolio-gallery.scss
+++ b/sass/components/_portfolio-gallery.scss
@@ -1,7 +1,6 @@
 .portfolio__content .container {
     padding-top: 50px;
   }
-  
   .portfolio__gallery {
     margin-top: 0;
     margin-bottom: 94px;
@@ -9,26 +8,26 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  .portfolio__gallery-item li{
-    margin-left: 0;
-    flex-basis: calc(100%/3);
-  }
   .portfolio__gallery-item {
     margin-bottom: 30px;
-  }
-  .portfolio__gallery-item figcaption {
-    padding: 20px 24px;
-    width: 370px;
-  }
-  .portfolio__gallery-item figure {
-    border: 1px solid var(--menu-line);
-    width: 370px;
-  }
-  .portfolio__gallery-item figure:hover {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-    cursor: pointer;
+    & li {
+      margin-left: 0;
+      flex-basis: calc(100%/3);
+    }
+    & figcaption {
+      padding: 20px 24px;
+      width: 370px;
+    }
+    & figure {
+      border: 1px solid var(--menu-line);
+      width: 370px;
+      &:hover {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+        cursor: pointer;
+      }
+    }
   }
   .portfolio__gallery-item:hover .portfolio__overflow {
     transform: translatey(0);
@@ -36,9 +35,16 @@
   .portfolio__gallery-box {
     position: relative;
     overflow: hidden;
-  }
-  .portfolio__gallery-box img {
-    display: block;
+    & img {
+      display: block;
+    }
+    & p {
+      font-size: 18px;
+      line-height: 1.556;
+      color: var(--main-bg);
+      padding: 49px 24px;
+      margin: 0;
+    }
   }
   .portfolio__overflow {
     position: absolute;
@@ -49,14 +55,6 @@
     background-color: rgba(33, 150, 243, 0.9);
     transform: translatey(100%);
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  /* .portfolio-overflow-txt, */
-  .portfolio__gallery-box p {
-    font-size: 18px;
-    line-height: 1.556;
-    color: var(--main-bg);
-    padding: 49px 24px;
-    margin: 0;
   }
   .portfolio__gallery-company {
     font-size: 18px;
