--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,8 +1,33 @@
 .container {
-    width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+  align-items: center;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+    margin: 0 auto;
+    padding: 0 15px;
+    padding-top: 60px;     
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    margin: 0 auto;
+    padding: 0 15px;
+    padding-top: 60px;    
+  }  
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 94px;
   }
+}  
