--- a/sass/components/_header-menu.scss
+++ b/sass/components/_header-menu.scss
@@ -1,18 +1,13 @@
 .header {
   background-color: var(--main-bg);
   border-bottom: 1px solid var(--menu-line);
-  padding-top: 24px;
-  padding-bottom: 25px;
+
   & .container {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding-top: 0;
   }
-}
-.navigation {
-  display: flex;
-  align-items: center;
 }
 .menu {
   display: flex;
@@ -35,16 +30,6 @@
 .menu a:focus {
   color: var(--button-hover-bg);
   cursor: pointer;
-}
-.current .menu__link::after {
-position: absolute;
-content: "";
-display: block;
-height: 4px;
-width: 100%;
-top: 45px;
-border-radius: 2px;
-background-color: var(--blue-elements);
 }
 .contact-list {
   display: flex;
@@ -76,4 +61,54 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact .contact-list__link:not(:last-child) {
 margin-right: 50px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+  .contact-list {
+    display: block;
+    
+    &__link {
+      font-size: 12px;
+      line-height: 1.167;
+    }
+  }    
+  .contact-list li:first-child {
+    margin-bottom: 10px;
+  }  
+  .contact__icon {
+    margin-right: 8px;
+  }  
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.current .menu__link::after {
+position: absolute;
+content: "";
+display: block;
+height: 4px;
+width: 100%;
+top: 45px;
+border-radius: 2px;
+background-color: var(--blue-elements);
 }
