--- a/sass/components/_news.scss
+++ b/sass/components/_news.scss
@@ -1,7 +1,7 @@
 .news__icon {
-    width: 270px;
+    width: 100%;
     height: 120px;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     background-color: var(--portfolio-buttons-bg);
@@ -10,6 +10,7 @@
   
   .section .news {
   display: flex;
+/*  flex-wrap: wrap; */
   justify-content: space-between;
   }
   .news__title {
@@ -24,6 +25,38 @@
   line-height: 1.714;
   margin-top: 10px;
   }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .section .news {
+    flex-wrap: wrap;
+  }
+  .news__item {
+    margin-right: 0;
+    margin-bottom: 30px;
+  }  
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .section .news {
+    flex-wrap: wrap;
+    flex-basis: calc(100%/2);
+  }
+  .news__icon {
+    max-width: 354px;
+  }
+  .news__item {
+    max-width: 354px;
+    margin-bottom: 30px;
+    &:not(:last-child) {
+      margin-right: 0;
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+/*  .news__icon {
+    width: 270px;
+    height: 120px;
+  }*/
   .news__item:not(:last-child) {
-  margin-right: 30px;
+    margin-right: 30px;  
+  }
 }
