--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./components/socials";
 
 @import "./components/header-menu";
+@import "./components/mobile-menu";
 @import "./components/head-info";
 @import "./components/news";
 @import "./components/about";
