--- a/css/main.css
+++ b/css/main.css
@@ -34,21 +34,38 @@ body {
   align-items: center;
 }
 
-@media screen and (min-width: 480px) {
+.section__txt {
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .container {
     max-width: 480px;
     margin: 0 auto;
     padding: 0 15px;
     padding-top: 60px;
   }
+  .section__txt {
+    font-size: 28px;
+    font-weight: 500;
+    margin-bottom: 0;
+  }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .container {
     max-width: 768px;
     margin: 0 auto;
     padding: 0 15px;
     padding-top: 60px;
+  }
+  .section__txt {
+    font-size: 28px;
+    font-weight: 500;
+    margin-bottom: 0;
   }
 }
 
@@ -381,6 +398,7 @@ form .modal__form-feedback {
   display: flex;
   justify-content: center;
   align-items: center;
+  fill: var(--customers-logos);
   width: 44x;
   height: 44px;
   background-color: var(--main-bg);
@@ -397,6 +415,12 @@ form .modal__form-feedback {
 .social-icon {
   width: 40px;
   height: 20px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .social-list {
+    margin-bottom: 24px;
+  }
 }
 
 .header {
@@ -474,10 +498,20 @@ form .modal__form-feedback {
   margin-right: 50px;
 }
 
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
     padding-top: 16px;
     padding-bottom: 16px;
+  }
+  .navigation,
+  .contact {
+    display: none;
+    visibility: hidden;
   }
 }
 
@@ -508,11 +542,6 @@ form .modal__form-feedback {
   }
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
 .current .menu__link::after {
   position: absolute;
   content: "";
@@ -522,6 +551,141 @@ form .modal__form-feedback {
   top: 45px;
   border-radius: 2px;
   background-color: var(--blue-elements);
+}
+
+.menu__mobile {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  max-width: 480px;
+  height: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu__mobile-modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: var(--main-bg);
+  width: 100%;
+  height: 100%;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+}
+
+.menu__mobile-close {
+  position: absolute;
+  align-content: center;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--main-bg);
+  border: 1px solid var(--main-bg);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.menu__mobile-close:hover {
+  fill: var(--blue-elements);
+}
+
+.menu__mobile-icon {
+  width: 24px;
+  height: 16px;
+}
+
+.menu__mobile-links {
+  text-decoration: none;
+  font-size: 40px;
+  font-weight: 500;
+  color: var(--main-text);
+  line-height: 1.172;
+}
+
+.menu__mobile-links:hover, .menu__mobile-links:focus {
+  color: var(--blue-elements);
+}
+
+.menu__mobile-items {
+  margin-bottom: 36px;
+}
+
+.menu__mobile-contacts {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  margin-top: 130px;
+}
+
+.menu__mobile-phone, .menu__mobile-email {
+  text-decoration: none;
+  line-height: 1.172;
+  font-weight: 500;
+}
+
+.menu__mobile-phone {
+  color: var(--blue-elements);
+  font-size: 34px;
+  margin-bottom: 32px;
+}
+
+.menu__mobile-email {
+  color: var(--grey-elements);
+  font-size: 24px;
+}
+
+.mobile__social-list {
+  display: flex;
+  flex-direction: row;
+  margin-top: 64px;
+}
+
+.mobile__social-link {
+  text-decoration: none;
+  color: var(--blue-elements);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.222;
+}
+
+.mobile__social-item:not(:first-child) {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.mobile__social-item:first-child {
+  margin-right: 10px;
+}
+
+.menu__mobile-btn {
+  margin: 0;
+  padding: 0;
+  width: 24px;
+  height: 16px;
+  background-color: var(--main-bg);
+  border-width: 0;
+  border-color: var(--main-bg);
+  visibility: hidden;
+  display: none;
+  cursor: pointer;
+}
+
+.menu__mobile-btn:hover {
+  fill: var(--blue-elements);
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .menu__mobile-btn {
+    display: block;
+    visibility: visible;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -727,17 +891,16 @@ form .modal__form-feedback {
   padding: 27px 0;
 }
 
-.section__txt {
-  font-size: 36px;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 50px;
+@media screen and (max-width: 1199px) {
+  .about__mobile {
+    display: none;
+    visibility: hidden;
+  }
 }
 
-.team__item:not(:last-child) {
+/*.team__item:not(:last-child) {
   margin-right: 30px;
-}
-
+} */
 .team__background {
   background-color: var(--portfolio-buttons-bg);
 }
@@ -745,6 +908,8 @@ form .modal__form-feedback {
 .container .team {
   padding-bottom: 94px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .team__item {
@@ -768,6 +933,45 @@ form .modal__form-feedback {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 16px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .team__item {
+    margin: 0;
+    margin-top: 30px;
+    width: 450px;
+  }
+  .team__item img {
+    width: 450px;
+    height: 460px;
+  }
+  .container .team {
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team {
+    margin: 0;
+  }
+  .team__item {
+    margin: 0;
+    margin-top: 30px;
+    width: 354px;
+    /*&:not(:last-child) {
+        margin-right: 0;
+      } 
+      &:nth-child(2n+1) {
+        margin-right: 30px;
+      }*/
+  }
+  .team__item img {
+    width: 354px;
+    height: 374px;
+  }
+  .container .team {
+    padding-bottom: 60px;
+  }
 }
 
 .customers {
@@ -799,6 +1003,26 @@ form .modal__form-feedback {
   border: 1px solid var(--blue-elements);
   fill: var(--blue-elements);
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .customers {
+    margin-bottom: 60px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .customers__item {
+    width: 226px;
+    height: 92px;
+    margin-top: 30px;
+    align-items: stretch;
+  }
+  .customers__item:not(:last-child) {
+    margin-right: 0;
+  }
+  .customers__item div {
+    align-content: center;
+  }
 }
 
 .portfolio__content .container {
