--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,21 +4,38 @@
   padding: 0 15px;
   align-items: center;
 }
-@media screen and (min-width: 480px) {
+.section__txt {
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .container {
     max-width: 480px;
     margin: 0 auto;
     padding: 0 15px;
     padding-top: 60px;     
   }
+  .section__txt {
+    font-size: 28px;
+    font-weight: 500;
+    margin-bottom: 0;
+  }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .container {
     max-width: 768px;
     margin: 0 auto;
     padding: 0 15px;
     padding-top: 60px;    
   }  
+  .section__txt {
+    font-size: 28px;
+    font-weight: 500;
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 1200px) {
