--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -34,9 +34,9 @@
       padding: 27px 0;
   }
 }
-  .section__txt {
-    font-size: 36px;
-    font-weight: 700;
-    text-align: center;
-    margin-bottom: 50px;
+@media screen and (max-width: 1199px) {
+  .about__mobile {
+    display: none;
+    visibility: hidden;
   }
+}
