--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -28,3 +28,26 @@
       }
   }
 }
+@media screen and (min-width: 320px) and (max-width: 767px) {
+
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .customers {
+        margin-bottom: 60px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        &__item {
+            width:226px;
+            height: 92px;
+            margin-top: 30px;
+            align-items: stretch;
+            
+            &:not(:last-child){
+                margin-right: 0;
+            }
+            & div {
+                align-content: center;
+            }
+        }
+    }
+}
