--- a/sass/components/_header-menu.scss
+++ b/sass/components/_header-menu.scss
@@ -63,12 +63,21 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 margin-right: 50px;
 }
 
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
     padding-top: 16px;
     padding-bottom: 16px;
   }
-
+  .navigation,
+  .contact {
+    display: none;
+    visibility: hidden;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header {
@@ -97,10 +106,6 @@ margin-right: 50px;
   }
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-}
 
 .current .menu__link::after {
 position: absolute;
