--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    fill: var(--customers-logos);
     width: 44x;
     height: 44px;
     background-color: var(--main-bg);
@@ -26,4 +27,10 @@
   .social-icon {
     width: 40px;
     height: 20px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    .social-list {
+      margin-bottom: 24px;
+    }
   }
