--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,12 +1,14 @@
-.team__item:not(:last-child) {
+/*.team__item:not(:last-child) {
   margin-right: 30px;
-}
+} */
 .team__background {
   background-color: var(--portfolio-buttons-bg);
 }
 .container .team {
   padding-bottom: 94px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .team__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -15,6 +17,7 @@
   border-radius: 0px 0px 4px 4px;
   background-color: var(--main-bg);
   border-bottom: 94px;
+
 }
 .team__name {
   font-weight: 500;
@@ -29,4 +32,47 @@
   text-align: center;
   margin-top: 10px;
   margin-bottom: 16px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .team {
+    &__item {
+      margin: 0;
+      margin-top: 30px;
+      width: 450px;
+      & img {
+        width: 450px;
+        height: 460px;
+      }
+    }
+    .container & {
+      padding-bottom: 60px;
+    } 
+  }
+
+
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team {
+    margin: 0;
+    &__item {
+      margin: 0;
+      margin-top: 30px;
+      width: 354px;
+      & img {
+        width: 354px;
+        height: 374px;
+      }
+      /*&:not(:last-child) {
+        margin-right: 0;
+      } 
+      &:nth-child(2n+1) {
+        margin-right: 30px;
+      }*/
+    } 
+    .container & {
+      padding-bottom: 60px;
+    } 
+  }
+
 }
